# hedgehog-plutus-simple

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Makefile  README.md  ROADMAP.md  cabal.project  flake.nix  hedgehog-plutus-simple.cabal  hie.yaml  liquidity-bridge.cabal  setup.sh  shell.nix  update-plutus.sh
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 0av3f30n9kg60gbnxxy0hvzdii7wi9gf-source  1ycbd13xbxn5czjsnxfdw76h422sw00z-source  2mpgi4bvn8py4liv9w3mjxd2c5r7bvv8-source  34d2ycwv2kkzbna16jc4yprl8iwrshlg-source  3dhcwf6599740m6lq8lf35dzazqdwg65-source  49gpvlfq0hrynr0p05vqsf7qxkbhgv7b-source  5g1gw0y3hs9pjhq1w01yangi1b9vb6gk-source  5w37kcliazivc2i7b4vcr63dq4xjjhnl-source  7gwwr6049drs852wfxmn8997nnrllm4l-source  81achkwnp9vw4r50rzh40fjd1rjfwsb6-source  88p4wx3219n5hpybpprzapv0mayn0f93-source  8hzvdf1ygw5hwganwnbbickrpaaxixca-source  8n76c1c3nz2wl6dzxmxdz2y5xrx70flw-source  a1b19akqys479nx3a1lb58vi2lgw8qr7-source  ar3rcx4qbzx61bz57v7bqg136qgpg22m-source  b9ag8npi39hxcjlwgwzg1bx128zq4yic-source  bq10m17mq4si9m2ai5h06b9zc27bbn3r-source  c39y3z66vmr5q152998wymdi0zk7q8hh-source  f6wmhkvd3zdcvri1a5hipxjb74ikizb6-source  fgmldfjxjk3n8ya4q4bidxmv1iiqwfjj-source  gi57g5nfrrc9m0m6snqf592qvzbwqnij-source  gqnxa8cm0bndbn1d20nk0d4rlzyszz2h-source  jrdacnvsyas4lzirksq3jyp12j4q27h8-source  jvq7x6zspss0akbm3bzlvg8x6lnz6ai7-source  kawxd91ly09hlyqprqs7yn650s3cfvf6-source  l7c7i0nhf1wkxrkzyl1wx59q17w6f7rb-source  m6i8rc9l1pnl2p4i6wl57kpqxdqvgvhg-source  mw4nxf4yija45wpq7nbnnci5c9383mp8-source  nb2kapr1yf12ra2x3jmdbm2lwfh9c1pr-source  nbl5ii6p176l1ndvc9z0h66pmsrgc71q-source  nwxp8winnkjfwdncf5f99ylgkx8lk548-source  plwa9ll2aj55fjfvpvv423ip0pp97xad-source  pv1hxdxhp1079w26mrhj5srlypdw4cn7-source  qcyrhggzysrnsm18kxhqy47wd6bvfk99-source  rm3v5bplih2r1nr3q1jbbxkaj0zrmbf5-source  rndi0mjf9p5m3i4zlq66k2glbdxd4lk6-source  ssl0mqlnq19i3ak1aj252jdghfmh3pfd-source  v1p19crhv9yzlc7plz0343hsmv05fq7k-source  v91zp7xgfpniwx2yrwbc6srss2n9y4kx-source  vbdsajgvjawyly5qp93q8pcnj200ij0c-source  (+5 more)
.github/: format.sh
.github/workflows/: integrate.yaml
cat-prelude/Catagory/: Prelude.hs
docs/: InformalSpec.md
docs/eutxo-design/: Deposit.dot  PaymentConfirmationSundae.dot
examples/: AuctionExample.hs  AuctionGen.hs  Gen.hs  Main.hs  Spec.hs  StateMachine.hs
examples/Auction/: PSM.hs  StateMachine.hs
examples/Week01/: EnglishAuction.hs  Types.hs
executables/LiquidityBridge/: Main.hs
executables/LiquidityBridgePAB/: Main.hs
executables/LiquidityBridgeServer/: Main.hs
geth-node/: create.sh  genesis.json  run.sh
geth-node/keydata/: UTC--2021-08-24T15-20-28.105101800Z--e3c0e3a942fe518a9cac0185d9acffafcc4fdce2  key.prv
liquidity-bridge-eth/: IERC20.sol  IUniswapV2Pair.sol  deposit.sol
liquidity-bridge-pab/: LiquidityBridgePAB.hs
liquidity-bridge-pab/LiquidityBridgePAB/: Logging.hs
liquidity-bridge-pab/Plutus/PAB/: PrettyLogger.hs
liquidity-bridge-server/: LiquidityBridgeServer.hs
liquidity-bridge-server/LiquidityBridgeServer/: CardanoInterface.hs  CardanoRequests.hs  Config.hs  CustomJSON.hs  EthereumInterface.hs  EthereumLogData.hs  EthereumRequests.hs  EthereumTypes.hs  EthereumValues.hs  Requests.hs
nix/: ci.nix  default.nix  haskell.nix  pab.nix  solc.nix  sources.json  update.nix
src/: Hedgehog.hs  LiquidityBridge.hs  PPrelude.hs
src/Hedgehog/Plutus/: Adjunction.hs  AuctionExample.hs  BadGen.hs  Diff.hs  Gen.hs  Generics.hs  Model.hs  Objective.hs  ScriptContext.hs  Simple.hs  TestData.hs  TestSingleScript.hs  TimeTest.hs  Tx.hs  TxObjectives.hs  TxSequence.hs  TxTest.hs
src/Hedgehog/Plutus/Model/: Internal.hs  Run.hs  TxHelpers.hs
src/Hedgehog/Plutus/TestData/: Plutus.hs
test/: Spec.hs  Time.hs  TxValid.hs
test/Spec/LiquidityBridge/: PaymentConfirmation.hs
test/Spec/LiquidityBridgeServer/: CardanoRequests.hs  EthereumTypes.hs  EthereumValues.hs  QuickCheckHelper.hs
