cabal-version:      3.0
name:               hedgehog-plutus-simple
version:            0.1
synopsis:           TODO
description:        TODO
homepage:           git@github.com:mlabs-haskell/hedgehog-plutus-simple.git
bug-reports:        git@github.com:mlabs-haskell/hedgehog-plutus-simple.git
license:
license-file:
author:             MLabs
maintainer:         TODO
copyright:          TODO
category:           TODO
build-type:         Simple
tested-with:        GHC ==9.2.1
extra-source-files: README.md

source-repository head
  type:     git
  location: https://github.com/mlabs-haskell/hedgehog-plutus-simple.git

-- Common sections

common common-lang
  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns -Wno-unused-do-bind
    -Wno-partial-type-signatures -Wmissing-export-lists
    -Wincomplete-record-updates -Wmissing-deriving-strategies
    -Wno-name-shadowing -Wunused-foralls -fprint-explicit-foralls
    -fprint-explicit-kinds -fwarn-missing-import-lists -Werror

  build-depends:      base >=4.14
  default-extensions:
    NoStarIsType
    BangPatterns
    BinaryLiterals
    ConstrainedClassMethods
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DoAndIfThenElse
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    ForeignFunctionInterface
    GADTSyntax
    GeneralisedNewtypeDeriving
    HexFloatLiterals
    ImplicitPrelude
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MonomorphismRestriction
    MultiParamTypeClasses
    NamedFieldPuns
    NamedWildCards
    NumericUnderscores
    OverloadedRecordDot
    OverloadedStrings
    PartialTypeSignatures
    PatternGuards
    PolyKinds
    PostfixOperators
    RankNTypes
    RelaxedPolyRec
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TraditionalRecordSyntax
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
    ViewPatterns

  default-language:   Haskell2010

library
  import:          common-lang
  exposed-modules: Hedgehog.Plutus.Simple
  build-depends:
    , hedgehog
    , plutus-ledger-api
    , plutus-simple-model

  hs-source-dirs:  src

executable examples
  import:         common-lang
  main-is:        Main.hs
  hs-source-dirs: examples
  other-modules:
    Auction.PSM
    Auction.StateMachine

  build-depends:
    , containers
    , hedgehog
    , mtl
    , plutus-ledger-api
    , plutus-simple-model
    , strict-containers
